# stock-change

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  stock-price.rb  stock.py
.github/workflows/: release.yml  tests.yml  update-demo.yml
assets/: demo.tape
tests/: test_stock.py
